objects/Interactive_Validation_Step__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dev1</fullName>
                </value>
                <value>
                    <fullName>Dev2</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Hotfix</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExecutionDetails__c</fullName>
        <label>ExecutionDetails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExecutionOrder__c</fullName>
        <label>ExecutionOrder</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <label>Expected Result</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interactive_Validation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interactive Validation</label>
        <referenceTo>Interactive_Validation__c</referenceTo>
        <relationshipLabel>Interactive Validation Steps</relationshipLabel>
        <relationshipName>Interactive_Validation_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Validate Data</fullName>
                </value>
                <value>
                    <fullName>Validate Metadata</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Interactive Validation Step</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Interactive Validation Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interactive Validation Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ExecutionDetails_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( ExecutionDetails__c )</errorConditionFormula>
        <errorDisplayField>ExecutionDetails__c</errorDisplayField>
        <errorMessage>Execution Details is required</errorMessage>
    </validationRules>
</CustomObject>